// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pre-fix golden snapshots for Pro and person-generation behavior preserves a Pro Studio request without thinkingLevel and with all fourteen references 1`] = `
{
  "contents": [
    {
      "parts": [
        {
          "text": "Generate an image of: Compose a new image using the provided reference inputs:
Use Image A for the primary subject/dish.
Use Image B for the art style, lighting, and color palette.
Use Image C for the art style, lighting, and color palette.
Use Image D for the art style, lighting, and color palette.
Use Image E for the art style, lighting, and color palette.
Use Image F for the art style, lighting, and color palette.
Use Image G for the art style, lighting, and color palette.
Use Image H for the art style, lighting, and color palette.
Use Image I for the art style, lighting, and color palette.
Use Image J for the art style, lighting, and color palette.
Use Image K for the art style, lighting, and color palette.
Use Image L for the art style, lighting, and color palette.
Use Image M for the art style, lighting, and color palette.
Use Image N for the art style, lighting, and color palette. 
Integrate the subject naturally into the environment while maintaining the requested style and layout.

Preserve the plated dish while applying the selected Studio edit.
Aspect ratio: 4:3
No people in the image.
Content safety: block_some",
        },
        {
          "inlineData": {
            "data": "cmVmZXJlbmNlLTE=",
            "mimeType": "image/png",
          },
        },
        {
          "inlineData": {
            "data": "cmVmZXJlbmNlLTI=",
            "mimeType": "image/png",
          },
        },
        {
          "inlineData": {
            "data": "cmVmZXJlbmNlLTM=",
            "mimeType": "image/png",
          },
        },
        {
          "inlineData": {
            "data": "cmVmZXJlbmNlLTQ=",
            "mimeType": "image/png",
          },
        },
        {
          "inlineData": {
            "data": "cmVmZXJlbmNlLTU=",
            "mimeType": "image/png",
          },
        },
        {
          "inlineData": {
            "data": "cmVmZXJlbmNlLTY=",
            "mimeType": "image/png",
          },
        },
        {
          "inlineData": {
            "data": "cmVmZXJlbmNlLTc=",
            "mimeType": "image/png",
          },
        },
        {
          "inlineData": {
            "data": "cmVmZXJlbmNlLTg=",
            "mimeType": "image/png",
          },
        },
        {
          "inlineData": {
            "data": "cmVmZXJlbmNlLTk=",
            "mimeType": "image/png",
          },
        },
        {
          "inlineData": {
            "data": "cmVmZXJlbmNlLTEw",
            "mimeType": "image/png",
          },
        },
        {
          "inlineData": {
            "data": "cmVmZXJlbmNlLTEx",
            "mimeType": "image/png",
          },
        },
        {
          "inlineData": {
            "data": "cmVmZXJlbmNlLTEy",
            "mimeType": "image/png",
          },
        },
        {
          "inlineData": {
            "data": "cmVmZXJlbmNlLTEz",
            "mimeType": "image/png",
          },
        },
        {
          "inlineData": {
            "data": "cmVmZXJlbmNlLTE0",
            "mimeType": "image/png",
          },
        },
      ],
      "role": "user",
    },
  ],
  "generationConfig": {
    "candidateCount": 1,
    "imageConfig": {
      "aspectRatio": "4:3",
      "imageSize": "4K",
    },
    "responseModalities": [
      "IMAGE",
    ],
  },
}
`;

exports[`pre-fix golden snapshots for Pro and person-generation behavior preserves the exact no-people instruction 1`] = `
{
  "contents": [
    {
      "parts": [
        {
          "text": "Generate an image of: A plated menu dish.
No people in the image.
Content safety: block_none",
        },
      ],
      "role": "user",
    },
  ],
  "generationConfig": {
    "candidateCount": 1,
    "imageConfig": {
      "aspectRatio": "1:1",
      "imageSize": "1k",
    },
    "responseModalities": [
      "IMAGE",
    ],
  },
}
`;

exports[`pre-fix golden snapshots for admin sandboxes preserves every valid admin route aspect ratio and Pro image-size token 1`] = `
{
  "adminGemini": {
    "16:9": {
      "contents": [
        {
          "parts": [
            {
              "text": "Generate an image of: Admin Gemini 16:9
Aspect ratio: 16:9
No people in the image.
Content safety: block_some",
            },
          ],
          "role": "user",
        },
      ],
      "generationConfig": {
        "candidateCount": 1,
        "imageConfig": {
          "aspectRatio": "16:9",
          "imageSize": "1k",
        },
        "responseModalities": [
          "IMAGE",
        ],
      },
    },
    "1:1": {
      "contents": [
        {
          "parts": [
            {
              "text": "Generate an image of: Admin Gemini 1:1
Aspect ratio: 1:1
No people in the image.
Content safety: block_some",
            },
          ],
          "role": "user",
        },
      ],
      "generationConfig": {
        "candidateCount": 1,
        "imageConfig": {
          "aspectRatio": "1:1",
          "imageSize": "1k",
        },
        "responseModalities": [
          "IMAGE",
        ],
      },
    },
    "3:4": {
      "contents": [
        {
          "parts": [
            {
              "text": "Generate an image of: Admin Gemini 3:4
Aspect ratio: 3:4
No people in the image.
Content safety: block_some",
            },
          ],
          "role": "user",
        },
      ],
      "generationConfig": {
        "candidateCount": 1,
        "imageConfig": {
          "aspectRatio": "3:4",
          "imageSize": "1k",
        },
        "responseModalities": [
          "IMAGE",
        ],
      },
    },
    "4:3": {
      "contents": [
        {
          "parts": [
            {
              "text": "Generate an image of: Admin Gemini 4:3
Aspect ratio: 4:3
No people in the image.
Content safety: block_some",
            },
          ],
          "role": "user",
        },
      ],
      "generationConfig": {
        "candidateCount": 1,
        "imageConfig": {
          "aspectRatio": "4:3",
          "imageSize": "1k",
        },
        "responseModalities": [
          "IMAGE",
        ],
      },
    },
    "9:16": {
      "contents": [
        {
          "parts": [
            {
              "text": "Generate an image of: Admin Gemini 9:16
Aspect ratio: 9:16
No people in the image.
Content safety: block_some",
            },
          ],
          "role": "user",
        },
      ],
      "generationConfig": {
        "candidateCount": 1,
        "imageConfig": {
          "aspectRatio": "9:16",
          "imageSize": "1k",
        },
        "responseModalities": [
          "IMAGE",
        ],
      },
    },
  },
  "adminGeneral": {
    "16:9": {
      "contents": [
        {
          "parts": [
            {
              "text": "Generate an image of: Admin general 16:9
Aspect ratio: 16:9
No people in the image.
Content safety: block_some",
            },
          ],
          "role": "user",
        },
      ],
      "generationConfig": {
        "candidateCount": 1,
        "imageConfig": {
          "aspectRatio": "16:9",
          "imageSize": "1k",
        },
        "responseModalities": [
          "IMAGE",
        ],
      },
    },
    "1:1": {
      "contents": [
        {
          "parts": [
            {
              "text": "Generate an image of: Admin general 1:1
Aspect ratio: 1:1
No people in the image.
Content safety: block_some",
            },
          ],
          "role": "user",
        },
      ],
      "generationConfig": {
        "candidateCount": 1,
        "imageConfig": {
          "aspectRatio": "1:1",
          "imageSize": "1k",
        },
        "responseModalities": [
          "IMAGE",
        ],
      },
    },
    "3:4": {
      "contents": [
        {
          "parts": [
            {
              "text": "Generate an image of: Admin general 3:4
Aspect ratio: 3:4
No people in the image.
Content safety: block_some",
            },
          ],
          "role": "user",
        },
      ],
      "generationConfig": {
        "candidateCount": 1,
        "imageConfig": {
          "aspectRatio": "3:4",
          "imageSize": "1k",
        },
        "responseModalities": [
          "IMAGE",
        ],
      },
    },
    "4:3": {
      "contents": [
        {
          "parts": [
            {
              "text": "Generate an image of: Admin general 4:3
Aspect ratio: 4:3
No people in the image.
Content safety: block_some",
            },
          ],
          "role": "user",
        },
      ],
      "generationConfig": {
        "candidateCount": 1,
        "imageConfig": {
          "aspectRatio": "4:3",
          "imageSize": "1k",
        },
        "responseModalities": [
          "IMAGE",
        ],
      },
    },
    "9:16": {
      "contents": [
        {
          "parts": [
            {
              "text": "Generate an image of: Admin general 9:16
Aspect ratio: 9:16
No people in the image.
Content safety: block_some",
            },
          ],
          "role": "user",
        },
      ],
      "generationConfig": {
        "candidateCount": 1,
        "imageConfig": {
          "aspectRatio": "9:16",
          "imageSize": "1k",
        },
        "responseModalities": [
          "IMAGE",
        ],
      },
    },
  },
  "adminPro": {
    "16:9-1K": {
      "contents": [
        {
          "parts": [
            {
              "text": "Generate an image of: Admin Pro 16:9 1K
Aspect ratio: 16:9
No people in the image.
Content safety: block_some",
            },
          ],
          "role": "user",
        },
      ],
      "generationConfig": {
        "candidateCount": 1,
        "imageConfig": {
          "aspectRatio": "16:9",
          "imageSize": "1K",
        },
        "responseModalities": [
          "IMAGE",
        ],
      },
    },
    "16:9-2K": {
      "contents": [
        {
          "parts": [
            {
              "text": "Generate an image of: Admin Pro 16:9 2K
Aspect ratio: 16:9
No people in the image.
Content safety: block_some",
            },
          ],
          "role": "user",
        },
      ],
      "generationConfig": {
        "candidateCount": 1,
        "imageConfig": {
          "aspectRatio": "16:9",
          "imageSize": "2K",
        },
        "responseModalities": [
          "IMAGE",
        ],
      },
    },
    "16:9-4K": {
      "contents": [
        {
          "parts": [
            {
              "text": "Generate an image of: Admin Pro 16:9 4K
Aspect ratio: 16:9
No people in the image.
Content safety: block_some",
            },
          ],
          "role": "user",
        },
      ],
      "generationConfig": {
        "candidateCount": 1,
        "imageConfig": {
          "aspectRatio": "16:9",
          "imageSize": "4K",
        },
        "responseModalities": [
          "IMAGE",
        ],
      },
    },
    "1:1-1K": {
      "contents": [
        {
          "parts": [
            {
              "text": "Generate an image of: Admin Pro 1:1 1K
Aspect ratio: 1:1
No people in the image.
Content safety: block_some",
            },
          ],
          "role": "user",
        },
      ],
      "generationConfig": {
        "candidateCount": 1,
        "imageConfig": {
          "aspectRatio": "1:1",
          "imageSize": "1K",
        },
        "responseModalities": [
          "IMAGE",
        ],
      },
    },
    "1:1-2K": {
      "contents": [
        {
          "parts": [
            {
              "text": "Generate an image of: Admin Pro 1:1 2K
Aspect ratio: 1:1
No people in the image.
Content safety: block_some",
            },
          ],
          "role": "user",
        },
      ],
      "generationConfig": {
        "candidateCount": 1,
        "imageConfig": {
          "aspectRatio": "1:1",
          "imageSize": "2K",
        },
        "responseModalities": [
          "IMAGE",
        ],
      },
    },
    "1:1-4K": {
      "contents": [
        {
          "parts": [
            {
              "text": "Generate an image of: Admin Pro 1:1 4K
Aspect ratio: 1:1
No people in the image.
Content safety: block_some",
            },
          ],
          "role": "user",
        },
      ],
      "generationConfig": {
        "candidateCount": 1,
        "imageConfig": {
          "aspectRatio": "1:1",
          "imageSize": "4K",
        },
        "responseModalities": [
          "IMAGE",
        ],
      },
    },
    "21:9-1K": {
      "contents": [
        {
          "parts": [
            {
              "text": "Generate an image of: Admin Pro 21:9 1K
Aspect ratio: 21:9
No people in the image.
Content safety: block_some",
            },
          ],
          "role": "user",
        },
      ],
      "generationConfig": {
        "candidateCount": 1,
        "imageConfig": {
          "aspectRatio": "21:9",
          "imageSize": "1K",
        },
        "responseModalities": [
          "IMAGE",
        ],
      },
    },
    "21:9-2K": {
      "contents": [
        {
          "parts": [
            {
              "text": "Generate an image of: Admin Pro 21:9 2K
Aspect ratio: 21:9
No people in the image.
Content safety: block_some",
            },
          ],
          "role": "user",
        },
      ],
      "generationConfig": {
        "candidateCount": 1,
        "imageConfig": {
          "aspectRatio": "21:9",
          "imageSize": "2K",
        },
        "responseModalities": [
          "IMAGE",
        ],
      },
    },
    "21:9-4K": {
      "contents": [
        {
          "parts": [
            {
              "text": "Generate an image of: Admin Pro 21:9 4K
Aspect ratio: 21:9
No people in the image.
Content safety: block_some",
            },
          ],
          "role": "user",
        },
      ],
      "generationConfig": {
        "candidateCount": 1,
        "imageConfig": {
          "aspectRatio": "21:9",
          "imageSize": "4K",
        },
        "responseModalities": [
          "IMAGE",
        ],
      },
    },
    "2:3-1K": {
      "contents": [
        {
          "parts": [
            {
              "text": "Generate an image of: Admin Pro 2:3 1K
Aspect ratio: 2:3
No people in the image.
Content safety: block_some",
            },
          ],
          "role": "user",
        },
      ],
      "generationConfig": {
        "candidateCount": 1,
        "imageConfig": {
          "aspectRatio": "2:3",
          "imageSize": "1K",
        },
        "responseModalities": [
          "IMAGE",
        ],
      },
    },
    "2:3-2K": {
      "contents": [
        {
          "parts": [
            {
              "text": "Generate an image of: Admin Pro 2:3 2K
Aspect ratio: 2:3
No people in the image.
Content safety: block_some",
            },
          ],
          "role": "user",
        },
      ],
      "generationConfig": {
        "candidateCount": 1,
        "imageConfig": {
          "aspectRatio": "2:3",
          "imageSize": "2K",
        },
        "responseModalities": [
          "IMAGE",
        ],
      },
    },
    "2:3-4K": {
      "contents": [
        {
          "parts": [
            {
              "text": "Generate an image of: Admin Pro 2:3 4K
Aspect ratio: 2:3
No people in the image.
Content safety: block_some",
            },
          ],
          "role": "user",
        },
      ],
      "generationConfig": {
        "candidateCount": 1,
        "imageConfig": {
          "aspectRatio": "2:3",
          "imageSize": "4K",
        },
        "responseModalities": [
          "IMAGE",
        ],
      },
    },
    "3:2-1K": {
      "contents": [
        {
          "parts": [
            {
              "text": "Generate an image of: Admin Pro 3:2 1K
Aspect ratio: 3:2
No people in the image.
Content safety: block_some",
            },
          ],
          "role": "user",
        },
      ],
      "generationConfig": {
        "candidateCount": 1,
        "imageConfig": {
          "aspectRatio": "3:2",
          "imageSize": "1K",
        },
        "responseModalities": [
          "IMAGE",
        ],
      },
    },
    "3:2-2K": {
      "contents": [
        {
          "parts": [
            {
              "text": "Generate an image of: Admin Pro 3:2 2K
Aspect ratio: 3:2
No people in the image.
Content safety: block_some",
            },
          ],
          "role": "user",
        },
      ],
      "generationConfig": {
        "candidateCount": 1,
        "imageConfig": {
          "aspectRatio": "3:2",
          "imageSize": "2K",
        },
        "responseModalities": [
          "IMAGE",
        ],
      },
    },
    "3:2-4K": {
      "contents": [
        {
          "parts": [
            {
              "text": "Generate an image of: Admin Pro 3:2 4K
Aspect ratio: 3:2
No people in the image.
Content safety: block_some",
            },
          ],
          "role": "user",
        },
      ],
      "generationConfig": {
        "candidateCount": 1,
        "imageConfig": {
          "aspectRatio": "3:2",
          "imageSize": "4K",
        },
        "responseModalities": [
          "IMAGE",
        ],
      },
    },
    "3:4-1K": {
      "contents": [
        {
          "parts": [
            {
              "text": "Generate an image of: Admin Pro 3:4 1K
Aspect ratio: 3:4
No people in the image.
Content safety: block_some",
            },
          ],
          "role": "user",
        },
      ],
      "generationConfig": {
        "candidateCount": 1,
        "imageConfig": {
          "aspectRatio": "3:4",
          "imageSize": "1K",
        },
        "responseModalities": [
          "IMAGE",
        ],
      },
    },
    "3:4-2K": {
      "contents": [
        {
          "parts": [
            {
              "text": "Generate an image of: Admin Pro 3:4 2K
Aspect ratio: 3:4
No people in the image.
Content safety: block_some",
            },
          ],
          "role": "user",
        },
      ],
      "generationConfig": {
        "candidateCount": 1,
        "imageConfig": {
          "aspectRatio": "3:4",
          "imageSize": "2K",
        },
        "responseModalities": [
          "IMAGE",
        ],
      },
    },
    "3:4-4K": {
      "contents": [
        {
          "parts": [
            {
              "text": "Generate an image of: Admin Pro 3:4 4K
Aspect ratio: 3:4
No people in the image.
Content safety: block_some",
            },
          ],
          "role": "user",
        },
      ],
      "generationConfig": {
        "candidateCount": 1,
        "imageConfig": {
          "aspectRatio": "3:4",
          "imageSize": "4K",
        },
        "responseModalities": [
          "IMAGE",
        ],
      },
    },
    "4:3-1K": {
      "contents": [
        {
          "parts": [
            {
              "text": "Generate an image of: Admin Pro 4:3 1K
Aspect ratio: 4:3
No people in the image.
Content safety: block_some",
            },
          ],
          "role": "user",
        },
      ],
      "generationConfig": {
        "candidateCount": 1,
        "imageConfig": {
          "aspectRatio": "4:3",
          "imageSize": "1K",
        },
        "responseModalities": [
          "IMAGE",
        ],
      },
    },
    "4:3-2K": {
      "contents": [
        {
          "parts": [
            {
              "text": "Generate an image of: Admin Pro 4:3 2K
Aspect ratio: 4:3
No people in the image.
Content safety: block_some",
            },
          ],
          "role": "user",
        },
      ],
      "generationConfig": {
        "candidateCount": 1,
        "imageConfig": {
          "aspectRatio": "4:3",
          "imageSize": "2K",
        },
        "responseModalities": [
          "IMAGE",
        ],
      },
    },
    "4:3-4K": {
      "contents": [
        {
          "parts": [
            {
              "text": "Generate an image of: Admin Pro 4:3 4K
Aspect ratio: 4:3
No people in the image.
Content safety: block_some",
            },
          ],
          "role": "user",
        },
      ],
      "generationConfig": {
        "candidateCount": 1,
        "imageConfig": {
          "aspectRatio": "4:3",
          "imageSize": "4K",
        },
        "responseModalities": [
          "IMAGE",
        ],
      },
    },
    "4:5-1K": {
      "contents": [
        {
          "parts": [
            {
              "text": "Generate an image of: Admin Pro 4:5 1K
Aspect ratio: 4:5
No people in the image.
Content safety: block_some",
            },
          ],
          "role": "user",
        },
      ],
      "generationConfig": {
        "candidateCount": 1,
        "imageConfig": {
          "aspectRatio": "4:5",
          "imageSize": "1K",
        },
        "responseModalities": [
          "IMAGE",
        ],
      },
    },
    "4:5-2K": {
      "contents": [
        {
          "parts": [
            {
              "text": "Generate an image of: Admin Pro 4:5 2K
Aspect ratio: 4:5
No people in the image.
Content safety: block_some",
            },
          ],
          "role": "user",
        },
      ],
      "generationConfig": {
        "candidateCount": 1,
        "imageConfig": {
          "aspectRatio": "4:5",
          "imageSize": "2K",
        },
        "responseModalities": [
          "IMAGE",
        ],
      },
    },
    "4:5-4K": {
      "contents": [
        {
          "parts": [
            {
              "text": "Generate an image of: Admin Pro 4:5 4K
Aspect ratio: 4:5
No people in the image.
Content safety: block_some",
            },
          ],
          "role": "user",
        },
      ],
      "generationConfig": {
        "candidateCount": 1,
        "imageConfig": {
          "aspectRatio": "4:5",
          "imageSize": "4K",
        },
        "responseModalities": [
          "IMAGE",
        ],
      },
    },
    "5:4-1K": {
      "contents": [
        {
          "parts": [
            {
              "text": "Generate an image of: Admin Pro 5:4 1K
Aspect ratio: 5:4
No people in the image.
Content safety: block_some",
            },
          ],
          "role": "user",
        },
      ],
      "generationConfig": {
        "candidateCount": 1,
        "imageConfig": {
          "aspectRatio": "5:4",
          "imageSize": "1K",
        },
        "responseModalities": [
          "IMAGE",
        ],
      },
    },
    "5:4-2K": {
      "contents": [
        {
          "parts": [
            {
              "text": "Generate an image of: Admin Pro 5:4 2K
Aspect ratio: 5:4
No people in the image.
Content safety: block_some",
            },
          ],
          "role": "user",
        },
      ],
      "generationConfig": {
        "candidateCount": 1,
        "imageConfig": {
          "aspectRatio": "5:4",
          "imageSize": "2K",
        },
        "responseModalities": [
          "IMAGE",
        ],
      },
    },
    "5:4-4K": {
      "contents": [
        {
          "parts": [
            {
              "text": "Generate an image of: Admin Pro 5:4 4K
Aspect ratio: 5:4
No people in the image.
Content safety: block_some",
            },
          ],
          "role": "user",
        },
      ],
      "generationConfig": {
        "candidateCount": 1,
        "imageConfig": {
          "aspectRatio": "5:4",
          "imageSize": "4K",
        },
        "responseModalities": [
          "IMAGE",
        ],
      },
    },
    "9:16-1K": {
      "contents": [
        {
          "parts": [
            {
              "text": "Generate an image of: Admin Pro 9:16 1K
Aspect ratio: 9:16
No people in the image.
Content safety: block_some",
            },
          ],
          "role": "user",
        },
      ],
      "generationConfig": {
        "candidateCount": 1,
        "imageConfig": {
          "aspectRatio": "9:16",
          "imageSize": "1K",
        },
        "responseModalities": [
          "IMAGE",
        ],
      },
    },
    "9:16-2K": {
      "contents": [
        {
          "parts": [
            {
              "text": "Generate an image of: Admin Pro 9:16 2K
Aspect ratio: 9:16
No people in the image.
Content safety: block_some",
            },
          ],
          "role": "user",
        },
      ],
      "generationConfig": {
        "candidateCount": 1,
        "imageConfig": {
          "aspectRatio": "9:16",
          "imageSize": "2K",
        },
        "responseModalities": [
          "IMAGE",
        ],
      },
    },
    "9:16-4K": {
      "contents": [
        {
          "parts": [
            {
              "text": "Generate an image of: Admin Pro 9:16 4K
Aspect ratio: 9:16
No people in the image.
Content safety: block_some",
            },
          ],
          "role": "user",
        },
      ],
      "generationConfig": {
        "candidateCount": 1,
        "imageConfig": {
          "aspectRatio": "9:16",
          "imageSize": "4K",
        },
        "responseModalities": [
          "IMAGE",
        ],
      },
    },
  },
}
`;

exports[`pre-fix golden snapshots for non-Studio requests preserves explicit square imageConfig values for legacy generate-image and batch requests 1`] = `
{
  "/api/generate-image": {
    "contents": [
      {
        "parts": [
          {
            "text": "Generate an image of: A menu tile for legacy generate-image.
Exclude: hands
Aspect ratio: 1:1
No people in the image.
Content safety: block_some",
          },
        ],
        "role": "user",
      },
    ],
    "generationConfig": {
      "candidateCount": 2,
      "imageConfig": {
        "aspectRatio": "1:1",
        "imageSize": "1k",
      },
      "responseModalities": [
        "IMAGE",
      ],
    },
  },
  "/api/image-generation/batches": {
    "contents": [
      {
        "parts": [
          {
            "text": "Generate an image of: A menu tile for legacy batch generation.
Exclude: hands
Aspect ratio: 1:1
No people in the image.
Content safety: block_some",
          },
        ],
        "role": "user",
      },
    ],
    "generationConfig": {
      "candidateCount": 1,
      "imageConfig": {
        "aspectRatio": "1:1",
        "imageSize": "1k",
      },
      "responseModalities": [
        "IMAGE",
      ],
    },
  },
}
`;

exports[`pre-fix golden snapshots for non-Studio requests records the pre-fix worker replay fallback and matching image metadata 1`] = `
{
  "apiParams": {
    "context": "food",
    "image_size": "2K",
    "model": "gemini-2.5-flash-image",
    "negative_prompt": "people",
    "number_of_images": 2,
    "person_generation": "dont_allow",
    "prompt": "A square worker replay menu tile",
    "safety_filter_level": "block_some",
  },
  "imageMetadata": {
    "aspectRatio": "1:1",
  },
  "requestBody": {
    "contents": [
      {
        "parts": [
          {
            "text": "Generate an image of: A square worker replay menu tile
Exclude: people
No people in the image.
Content safety: block_some",
          },
        ],
        "role": "user",
      },
    ],
    "generationConfig": {
      "candidateCount": 2,
      "imageConfig": {
        "aspectRatio": "1:1",
        "imageSize": "2K",
      },
      "responseModalities": [
        "IMAGE",
      ],
    },
  },
}
`;
